# apk_installer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  device.rs  downloader.rs  lib.rs  main.rs
