[package]
name = "apk_installer"
version = "0.3.0"
edition = "2021"

[lib]
name = "apk_installer"
path = "src/lib.rs"

[[bin]]
name = "iapk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive", "color"] }
reqwest = { version = "0.11.20", features = ["stream", "blocking"] }
indicatif = "0.17.7"
dialoguer = "0.11.0"
url = "2.4.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
